2004-03-23 0.8.1.23  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/state.c (route_gui_event): Added #ifdef DEBUG
	
2004-02-29 0.8.1.22  Roland Clobus <rclobus@bigfoot.com>
	* client/common.client.c (mode_load_gameinfo): Fixed textual error.
	* server/pregame.c (mode_pre_game): Fixed bugs for viewers with
	ID >= MAX_PLAYERS.
	* server/gnocatan-server-gtk.c (gui_player_change), server/gold.c
	(distribute_next, distribute_first), server/player.c (next_player_num,
	player_setup, player_free, player_archive, player_is_viewer),
	server/pregame.c (mode_pre_game), server/server.h, server/trade.c
	(trade_finish_domestic, process_call_domestic, trade_begin_domestic):
	new function player_is_viewer.
	* common/state.c (sm_pop): Fixed too relaxed assertion.
	* client/gtk/chat.c (chat_build_panel, chat_set_focus): Avoided
	selection of chat entry text on every gui update.

2004-02-28 0.8.1.21  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/common/client.c (client_init): added initialisation for init
	and new_bank
	* client/common/resource.c (resource_format_type): added 'nothing'
	when nothing is offered in a trade
	
2004-02-08 0.8.1.20  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/common/player.c, client/gtk/gameover.c, common/common_gtk.c,
	common/log.c, common/log.h: Removed MSG_NAMEANON, added prefixes to
	log_message_string_console.
	* client/common/develop.c: Removed selected_card_idx that was
	originally used for the gtk interface.
	* client/gtk/state.c, common/log.c, common/network.c,
	common/network.h, common/state.c: Renamed LOG defines to DEBUG. Made
	the log more readable.
	* client/callback.h, client/common/client.c, client/gtk/callbacks.c,
	client/gtk/frontend.h, client/gtk/player.c, client/common/player.c:
	Added rename for viewers, viewers are shown in Player Summary again.
	* client/callback.h, client/common/callback.c, client/common/client.c,
	client/common/client.h, client/common/player.c,
	client/common/resource.c, client/gtk/callbacks.c: Added support in the